# Roadmap-sh

./: .env  .gitignore
expense_tracker_api/: .env  Cargo.toml  expenses.db
expense_tracker_api/frontend/: home.html  index.html  vite.config.ts
expense_tracker_api/frontend/src/: main.ts
expense_tracker_api/migrations/: 20260209003440_init_schema.sql
expense_tracker_api/src/: auth.rs  errors.rs  handlers.rs  main.rs  schema.rs
expense_tracker_api/src/api/: auth.rs  mod.rs  state.rs
expense_tracker_api/src/api/dto/: api_errors.rs  claims.rs  dto_structs.rs  expense_dto.rs  list_expense_response.rs  mod.rs  user_dto.rs
expense_tracker_api/src/api/handlers/: create_user.rs  delete_expense.rs  list_expense.rs  login.rs  mod.rs  new_expense.rs  update_expense.rs
expense_tracker_api/src/domain/: categories.rs  errors.rs  expense_types.rs  mod.rs  user.rs  user_types.rs
