[package]
name = "expense_tracker_api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
argon2 = { version = "0.5.3", features = ["std"] }
axum = "0.8.8"
chrono = { version = "0.4.43", features = ["serde"] }
dotenvy = "0.15.0"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = [
  "runtime-tokio",
  "sqlite",
  "macros",
  ]}
thiserror = { version = "2.0.18", features = ["std"] }
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["fs"] }
tracing = "0.1.44"

